# KATch2

./: .aiinclude  .gitignore  Cargo.toml  README.md  UI.md  ai_assist.py  deploy.sh  requirements.txt  test_binary.k2  test_debug.k2  test_debug_range.k2  test_debug_range3.k2  test_lexer.rs  test_negation.k2  todo.md
.cargo/: config.toml
examples/: edge_cases.k2  expressions.k2  pattern_matching.k2  range_efficiency.k2  test.k2  test_bitrange.k2  test_bitrange_coloring.k2  test_compound.k2  test_debug_range2.k2  test_hex.k2  test_if_pattern_binary.k2  test_if_pattern_exact.k2  test_if_pattern_negated.k2  test_if_pattern_paren.k2  test_if_pattern_simple.k2  test_if_pattern_single.k2  test_ip.k2  test_ip_simple.k2  test_literals.k2  test_pattern_match_if.k2  test_simple.k2  test_simple_hex.k2  test_tilde_pattern.k2  test_user_example.k2
katch2ui/: katch2-editor.js
notes/: buchi.html
notes/hm/: app.js  index.html  style.css
src/: aut.rs  desugar.rs  expr.rs  fuzz.rs  lib.rs  main.rs  parser.rs  pre.rs  sp.rs  spp.rs  st.rs  ui.rs  viz.rs
static/: README.md  app.js  index.html  style.css
ui/: README.md  build-ui.sh  index.html  literature.md  playground.html  test-deployment.html  tutorial.html
ui/katch2ui/: README.md  katch2-editor.js
ui/katch2ui/pkg/: README.md  katch2.d.ts  katch2.js  katch2_bg.wasm  katch2_bg.wasm.d.ts
ui/wasm-ui/: README.md  demo.html  main.js  netkat-editor.js  simple-example.html  test.html
wasm-ui/: index.html  main.js
