[package]
name = "katch2"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
regex = "1.11.1"
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4.5.1"
actix-files = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
