[package]
name = "katch2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
regex = "1.11.1"
# tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt"] } # Temporarily removed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM dependencies
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "console",
    "InputEvent",
] }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.3.2", features = ["wasm_js"] }

# Dependencies for non-WASM targets (e.g., your native binary that uses tokio)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt"] }

# The following are optional but can be useful for WASM development:
# getrandom = { version = "0.2", features = ["js"] } # if rand needs it for wasm32-unknown-unknown

[dev-dependencies]
katch2 = { path = ".", version = "0.1.0" }
